Fixed check button alignment signup_invite (bootstrap)

--- a/public/hw3pt2_bootstrap/css/styles.css
+++ b/public/hw3pt2_bootstrap/css/styles.css
@@ -24,6 +24,10 @@ body{
   width: 9rem !important;
 }
 
+#checkbutton{
+  vertical-align: top !important;
+}
+
 #check{
   height: 2rem;
   position: absolute;
@@ -41,6 +45,5 @@ body{
 .teamimg{
   width: 5rem !important;
 }
-
 
 
